--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,15 @@
     </head>
 
     <body>
-        <h1>Future color</h1>
+        <header class="container">
+            <h1>Future color</h1>
+        </header>
 
-        <section>
+        <section class="container">
             <h2>Ingrediënten aanmaken</h2>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col">
                     <form id="ingredients-form" class="form">
                         <div class="form-group">
                             <label class="form-label" for="minMixSpeed">Minimale mengtijd in milliseconden</label>
@@ -45,10 +47,21 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
-            </div>
 
-            <h2>Ingrediënten</h2>
-            <div id="ingredients" class="d-flex gap-3 flex-row flex-wrap"></div>
+                <div class="col">
+                    <h2>Ingrediënten</h2>
+                    <div id="ingredients" class="d-flex gap-3 flex-row flex-wrap"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h2>Potten aanmaken</h2>
+
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
         </section>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
