--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header class="container">
+        <header class="container mb-4">
             <h1>Future color</h1>
         </header>
 
