feat: adjust header margin in index.html for better spacing

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header class="container mb-4">
+        <header class="container mt-3 mb-3">
             <h1>Future color</h1>
         </header>
 
