feat: restructure index.html to improve layout and section organization

--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,10 @@
         </header>
 
         <section class="container">
-            <h2>Ingrediënten aanmaken</h2>
-
             <div class="row">
-                <div class="col">
+                <div class="col-4">
+                    <h2>Ingrediënten aanmaken</h2>
+
                     <form id="ingredients-form" class="form">
                         <div class="form-group">
                             <label class="form-label" for="minMixSpeed">Minimale mengtijd in milliseconden</label>
@@ -56,11 +56,14 @@
         </section>
 
         <section class="container">
-            <h2>Potten aanmaken</h2>
-
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col-4">
+                    <h2>Potten aanmaken</h2>
+                </div>
+                <div class="col">
+                    <h2>Potten</h2>
+                    <div id="potten" class="d-flex gap-3 flex-row flex-wrap"></div>
+                </div>
             </div>
         </section>
 
