feat: add pot class styles and update pots section in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,10 @@ section {
     width: 100px;
     height: 100px;
 }
+
+.pot {
+    display: block;
+    width: 100px;
+    height: 150px;
+    background-color: lightgrey;
+}
