--- a/views/index.html
+++ b/views/index.html
@@ -59,10 +59,14 @@
             <div class="row">
                 <div class="col-4">
                     <h2>Potten aanmaken</h2>
+
+                    <form id="pots-form">
+                        <button type="submit" class="btn btn-primary">Lege pot aanmaken</button>
+                    </form>
                 </div>
                 <div class="col">
                     <h2>Potten</h2>
-                    <div id="potten" class="d-flex gap-3 flex-row flex-wrap"></div>
+                    <div id="pots" class="d-flex gap-3 flex-row flex-wrap"></div>
                 </div>
             </div>
         </section>
