--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,12 @@
     <body>
         <header class="container mt-3 mb-3">
             <h1>Future color</h1>
-            <div style="text-align: right;">
+            <div style="text-align: right">
                 <label for="cityDropdown">Locatie:</label>
-                <select id="cityDropdown">
+                <select id="cityDropdown" class="form-select width-fit"></select>
                     <!-- Cities will be loaded here dynamically -->
                 </select>
-                <button id="applyCityButton">Wijzigen</button>
+                <button id="applyCityButton" class="btn btn-secondary">Wijzigen</button>
             </div>
         </header>
 
