feat: enhance ingredient handling by adding validation messages and updating form inputs for required fields

--- a/views/index.html
+++ b/views/index.html
@@ -28,23 +28,23 @@
                     <form id="ingredients-form" class="form">
                         <div class="form-group">
                             <label class="form-label" for="minMixSpeed">Minimale mengtijd in milliseconden</label>
-                            <input id="minMixSpeed" class="form-control" name="minMixSpeed" type="number" />
+                            <input id="minMixSpeed" class="form-control" name="minMixSpeed" type="number" min="0" value="0" required />
                         </div>
 
                         <div class="form-group">
                             <label class="form-label" for="mixSpeed">Mengsnelheid</label>
-                            <input id="mixSpeed" class="form-control" name="mixSpeed" type="number" />
+                            <input id="mixSpeed" class="form-control" name="mixSpeed" type="number" min="0" value="0" required />
                         </div>
 
                         <div class="form-group">
                             <label class="form-label" for="color">Kleur</label>
-                            <input id="color" class="form-control" name="color" type="color" />
+                            <input id="color" class="form-control" name="color" type="color" required />
                         </div>
 
                         <div class="form-group">
                             <label class="form-label" for="structure">Structuur</label>
-                            <select id="structure" class="form-select" name="structure">
-                                <option value="korrel">Korrel</option>
+                            <select id="structure" class="form-select" name="structure" required>
+                                <option value="korrel" selected>Korrel</option>
                                 <option value="groveKorrel">Grove korrel</option>
                                 <option value="glad">Glad</option>
                                 <option value="slijmerig">Slijmerig</option>
