--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,21 @@ section {
     width: fit-content;
     display: inline-block;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 10px;
+    width: fit-content;
+}
+
+.cell {
+    width: 50px;
+    height: 50px;
+}
+
+.empty-cell {
+    background-color: #eeeeee;
+    border: 2px dashed lightgrey;
+}
