--- a/views/index.html
+++ b/views/index.html
@@ -78,6 +78,22 @@
             </div>
         </section>
 
+        <section class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h2>Kleuren testen</h2>
+
+                    <form id="test-form">
+                        <button type="submit" class="btn btn-primary">Grid aanmaken</button>
+                    </form>
+                </div>
+                <div class="col">
+                    <h2 class="mb-2">Test grid</h2>
+                    <div id="test-grid"></div>
+                </div>
+            </div>
+        </section>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module" src="../public/main.js"></script>
         <script type="module" src="../utils/dragAndDrop.js"></script>
