--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,67 @@ section {
     background-color: #eeeeee;
     border: 2px dashed lightgrey;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #cccccc;
+    padding: 0 10px 10px 10px;
+}
+
+.popup-body {
+    margin-top: 20px;
+}
+
+.popup-header h2 {
+    margin: 0;
+}
+
+.hidden-popup {
+    display: none;
+}
+
+.color-box {
+    width: 200px;
+    height: 100px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+.color-label {
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 1px 1px 2px black;
+    margin: 0;
+}
+
+#triadic-colors-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
