--- a/views/index.html
+++ b/views/index.html
@@ -94,6 +94,19 @@
             </div>
         </section>
 
+        <div id="triadic-colors-popup" class="popup hidden-popup">
+            <div class="popup-content">
+                <div class="popup-header">
+                    <h2>Triadische kleuren</h2>
+                    <button id="close-popup" class="btn-close" aria-label="Close"></button>
+                </div>
+
+                <div class="popup-body">
+                    <div id="triadic-colors-container"></div>
+                </div>
+            </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script type="module" src="../public/main.js"></script>
         <script type="module" src="../utils/dragAndDrop.js"></script>
