--- a/views/index.html
+++ b/views/index.html
@@ -92,11 +92,11 @@
                     <h5>Create machine</h5>
                     <div class="mb-2">
                         <label for="machineMixTime" class="form-label">Minimale mengtijd machine</label>
-                        <input id="machineMixTime" class="form-control" type="number" value="3" />
+                        <input id="machineMixTime" class="form-control" type="number" min="0" value="0" />
                     </div>
                     <div class="mb-2">
                         <label for="machineMixSpeed" class="form-label">Mengsnelheid</label>
-                        <input id="machineMixSpeed" class="form-control" type="number" value="100" />
+                        <input id="machineMixSpeed" class="form-control" type="number" min="0" value="0" />
                     </div>
                     <button id="addMachineButton" class="btn btn-primary">Add Machine</button>
                 </div>
