--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ section {
     display: flex;
     justify-content: space-between;
     gap: 10px;
-
+}
 .hall-square {
     background-color: #e9ecef;
     width: 600px;
