--- a/views/index.html
+++ b/views/index.html
@@ -78,17 +78,17 @@
             </div>
         </section>
 
-        <section class="container mt-4">
-            <div class="d-flex align-items-center mb-3" style="gap: 1rem;">
+        <section class="container">
+            <div class="d-flex align-items-center mb-3" style="gap: 1rem">
                 <h2 class="m-0">Hall Management</h2>
                 <select id="hallSwitcher" class="form-select w-auto">
                     <option value="hall-1">Hall 1</option>
                     <option value="hall-2">Hall 2</option>
                 </select>
             </div>
-        
+
             <div class="d-flex gap-4">
-                <div style="min-width: 250px;">
+                <div style="min-width: 250px">
                     <h5>Create machine</h5>
                     <div class="mb-2">
                         <label for="machineMixTime" class="form-label">Minimale mengtijd machine</label>
@@ -107,16 +107,9 @@
             </div>
         </section>
 
-        <section class="container mt-4">
-            <div class="row">
-                <div class="col-4">
-                    <h2>Mixed Pots</h2>
-                </div>
-                <div class="col">
-                    <h2 class="mb-2">Mixed Pots</h2>
-                    <div id="mixed-pots" class="d-flex gap-3 flex-row flex-wrap"></div>
-                </div>
-            </div>
+        <section class="container">
+            <h2 class="mb-2">Mixed Pots</h2>
+            <div id="mixed-pots" class="d-flex gap-3 flex-row flex-wrap"></div>
         </section>
 
         <section class="container">
